--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+# site details
+name: Joel Gross
+description: Personal website
+url: http://jagj10.github.io
 
-# Build settings
-markdown: kramdown
+# social profiles.
+github: jagj10
+twitter: outofdaylight
+
+highlighter: pygments
+permalink: /article/:title.html
+
+exclude: [readme.md]
+include: [.htaccess]
+timezone: America/New_York
